# nostr-proxy-relay

./: .env.example  .gitignore  Cargo.toml  README.md  env.example
docs/: filter-query.md  index.md
migrations/: 0001_init.sql  0002_add_management.sql  0003_add_relay_info.sql
scripts/: check_db.rs
src/: docs.rs  lib.rs  main.rs
src/api/: routes.rs
src/auth/: mod.rs
src/db/: migrate.rs  mod.rs
src/filter/: engine.rs
src/nostr/: event.rs  message.rs  mod.rs
src/parser/: filter_query.rs  filter_query_ast.rs  mod.rs  rule.rs
src/proxy/: mod.rs  ws_proxy.rs
tests/: integration.rs
web/: package-lock.json
web/src/: App.css  App.tsx  index.css
