[package]
name = "proxy-nostr-relay"
version = "0.1.0"
edition = "2021"
default-run = "proxy-nostr-relay"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
base64 = "0.22"
bech32 = "0.11"
bcrypt = "0.16"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dashmap = "6"
futures-util = "0.3"
headers = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
regex = "1.10"
pulldown-cmark = "0.10"

